--- a/src/styles/chatList/RWD.scss
+++ b/src/styles/chatList/RWD.scss
@@ -1,5 +1,13 @@
 @import "../Theme";
 
+@media screen and (max-width: 180px) {
+  .AddNewChat {
+    p {
+      height: fit-content !important;
+    }
+  }
+}
+
 @media screen and (max-width: 200px) {
   .EmptyUser {
     p {
@@ -12,6 +20,7 @@
 @media screen and (max-width: 300px) {
   .ChatList {
     min-width: 100%;
+    transition: width 5s !important;
   }
 }
 
@@ -23,8 +32,8 @@
   .ChatList {
     background-size: cover;
     background-position: center;
-    // background: url("/Landscape.jpg") rgba(0, 0, 0, 0.577);
-    background-color: #000;
+    background: url("/public/BG.png"), rgba(0, 0, 0, 0.815);
+    // background-color: black;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
     background-size: cover;
@@ -53,6 +62,7 @@
     p,
     input {
       text-align: left !important;
+      padding-right: 40px !important;
     }
   }
 }
