--- a/src/styles/mainChat/MainChat.scss
+++ b/src/styles/mainChat/MainChat.scss
@@ -11,7 +11,7 @@
   height: 100%;
   width: 100%;
   background-color: #209886;
-  overflow: scroll;
+  overflow-y: scroll;
 
   .Main {
     display: flex;
